--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PRIVATE_KEY= // Private key of operator/deployer of contract
-NEYNAR_API_KEY=
+AIRSTACK_API_KEY= 1cae251d7c27848beb920cf67c80dfa76
 NEXT_PUBLIC_CONTRACT_ADDRESS= // ERC20 Contract Address
 ALCHEMY_RPC_URL=
 ANKR_RPC_URL=
