--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PRIVATE_KEY= // Private key of operator/deployer of contract
-AIRSTACK_API_KEY= 1cae251d7c27848beb920cf67c80dfa76
+AIRSTACK_API_KEY= "1cae251d7c27848beb920cf67c80dfa76"
 NEXT_PUBLIC_CONTRACT_ADDRESS= // ERC20 Contract Address
-ALCHEMY_RPC_URL=
-ANKR_RPC_URL=
-BASE_URL= // Base URL of Website/API
-TOKEN_SYMBOL= // Token Symbol
+DEGEN_RPC_URL= "https://rpc.degen.tips"
+DEGEN_URL= "https://rpc.degen.tips"
+TOKEN_SYMBOL= "DEFRAME"
+
