all errors removed except route

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ NEXT_PUBLIC_CONTRACT_ADDRESS= // ERC20 Contract Address
 DEGEN_RPC_URL= "https://rpc.degen.tips"
 DEGEN_URL= "https://rpc.degen.tips"
 TOKEN_SYMBOL= "DEFRAME"
-
+AIRSTACK_API_KEY= "1cae251d7c27848beb920cf67c80dfa76"
